--- a/experiments/base_pipeline.assets/example-config.yaml
+++ b/experiments/base_pipeline.assets/example-config.yaml
@@ -2,14 +2,14 @@ nodes:
   - node_type: retrieval
     metric: retrieval_hit_rate
     modules:
-      - module_type: vectordb
+      - module_type: vector_db
         k: [10]
-        embedding_model:
-          - avsolatorio/NoInstruct-small-Embedding-v0
+        model_name:
+          # - avsolatorio/NoInstruct-small-Embedding-v0
           - avsolatorio/GIST-small-Embedding-v0
           - infgrad/stella-base-en-v2
   - node_type: scoring
-    metric: scoring_auc
+    metric: scoring_roc_auc
     modules:
       - module_type: knn
         k: [1, 3, 5, 10]
@@ -20,7 +20,7 @@ nodes:
           - cross-encoder/ms-marco-MiniLM-L-6-v2
         k: [1, 3, 5, 10]
   - node_type: prediction
-    metric: accuracy
+    metric: prediction_accuracy
     modules:
-      - module_type: uni_thresh
-        threshold: [0.1, 0.25, 0.5, 0.75, 0.9]
+      - module_type: threshold
+        single_thresh: [true]
