--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,6 @@ version = "0.1.0-alpha"
 description = "A tool for automatically configuring a text classification pipeline for intent prediction."
 authors = ["voorhs <ilya_alekseev_2016@list.ru>"]
 readme = "README.md"
-packages = [
-    { include = "autointent" },
-]
-include = [
-    { path = "scripts/" },
-]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -32,7 +26,7 @@ optional = true
 pytest = "8.3.2"
 
 [tool.poetry.scripts]
-"autointent" = "scripts.base_pipeline:main"
+"autointent" = "autointent.base_pipeline:main"
 
 [build-system]
 requires = ["poetry-core"]
