--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "autointent"
-version = "0.1.0-alpha"
+version = "0.1.1-alpha"
 description = "A tool for automatically configuring a text classification pipeline for intent prediction."
 authors = ["voorhs <ilya_alekseev_2016@list.ru>"]
 readme = "README.md"
@@ -11,6 +11,7 @@ sentence-transformers = "3.0.1"
 chromadb = "0.5.5"
 scikit-learn = "1.5.1"
 scikit-multilearn = "0.2.0"
+pysqlite3-binary = "^0.5.3.post1"
 
 [tool.poetry.group.dev]
 optional = true
