--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "autointent"
-version = "0.1.1-alpha"
+version = "0.1.2-alpha2"
 description = "A tool for automatically configuring a text classification pipeline for intent prediction."
 authors = ["voorhs <ilya_alekseev_2016@list.ru>"]
 readme = "README.md"
@@ -12,6 +12,7 @@ chromadb = "0.5.5"
 scikit-learn = "1.5.1"
 scikit-multilearn = "0.2.0"
 pysqlite3-binary = "^0.5.3.post1"
+appdirs = "^1.4.4"
 
 [tool.poetry.group.dev]
 optional = true
@@ -28,6 +29,7 @@ pytest = "8.3.2"
 
 [tool.poetry.scripts]
 "autointent" = "autointent.base_pipeline:main"
+"clear-cache" = "autointent.cache_utils:clear_chroma_cache"
 
 [build-system]
 requires = ["poetry-core"]
