refactor DataHandler and KNNScorer

--- a/autointent/datafiles/default-multilabel-config.yaml
+++ b/autointent/datafiles/default-multilabel-config.yaml
@@ -12,6 +12,7 @@ nodes:
     modules:
       - module_type: knn
         k: [3]
+        weights: [false]
       - module_type: linear
         multilabel: [true]
   - node_type: prediction
