--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "autointent"
-version = "0.1.2-alpha2"
+version = "0.2.0-alpha"
 description = "A tool for automatically configuring a text classification pipeline for intent prediction."
 authors = ["voorhs <ilya_alekseev_2016@list.ru>"]
 readme = "README.md"
