implement lots of features for multilabel mode

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pysqlite3-binary = "^0.5.3.post1"
 appdirs = "^1.4.4"
 sre-yield = "^1.2"
 optuna = "^4.0.0"
+xeger = "^0.4.0"
 
 [tool.poetry.group.dev]
 optional = true
