refactor knn and fix knn probs normalization issues

--- a/autointent/datafiles/default-multiclass-config.yaml
+++ b/autointent/datafiles/default-multiclass-config.yaml
@@ -13,7 +13,7 @@ nodes:
     modules:
       - module_type: knn
         k: [1, 3, 5, 10]
-        weights: [false]
+        weights: ["uniform", "distance", "closest"]
       - module_type: linear
       - module_type: dnnc
         model_name:
