--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ optional = true
 pytest = "8.3.2"
 
 [tool.poetry.scripts]
-"autointent" = "autointent.base_pipeline:main"
+"autointent" = "autointent.pipeline.main:main"
 "clear-cache" = "autointent.cache_utils:clear_chroma_cache"
 
 [tool.ruff]
