как будто починил dnnc

--- a/autointent/datafiles/default-multilabel-config.yaml
+++ b/autointent/datafiles/default-multilabel-config.yaml
@@ -10,11 +10,12 @@ nodes:
   - node_type: scoring
     metric: scoring_roc_auc
     modules:
-      - module_type: knn
-        k: [10]
-        weights: ["uniform", "distance", "closest"]
-      - module_type: linear
-        multilabel: [true]
+      - module_type: dnnc
+        model_name:
+          - BAAI/bge-reranker-base
+          - cross-encoder/ms-marco-MiniLM-L-6-v2
+        k: [ 10 ]
+
   - node_type: prediction
     metric: prediction_accuracy
     modules:
