chore/review: upd

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ sentence-transformers = "3.0.1"
 chromadb = "0.5.5"
 scikit-learn = "1.5.1"
 scikit-multilearn = "0.2.0"
-pysqlite3-binary = "^0.5.3.post1" ## TODO: почему не стандартная, для чего используется
+pysqlite3-binary = "^0.5.3.post1"
 appdirs = "^1.4.4"
 sre-yield = "^1.2"
 optuna = "^4.0.0"
