--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,11 +33,20 @@ pytest = "8.3.2"
 [tool.poetry.scripts]
 "autointent" = "autointent.base_pipeline:main"
 "clear-cache" = "autointent.cache_utils:clear_chroma_cache"
-"generate-utterances" = "autointent.generation.generate_utterances:main"
+"generate-utterances" = "autointent.generation.basic.generate:main"
+"evolve-utterances" = "autointent.generation.evolution.generate:main"
 
 [tool.ruff]
 line-length = 120
 indent-width = 4
+target-version = "py310"
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = ["D", "TD", "ANN", "FIX", "S311", "PTH", "TID252", "FBT"]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
 
 [build-system]
 requires = ["poetry-core"]
