refactor threshold predictor and enhance tunable predictor

--- a/tests/minimal-optimization/configs/multilabel.yaml
+++ b/tests/minimal-optimization/configs/multilabel.yaml
@@ -19,5 +19,5 @@ nodes:
     metric: prediction_accuracy
     modules:
       - module_type: threshold
-        thresh: [0.5]
+        thresh: [0.5, [0.5, 0.5, 0.5]]
       - module_type: tunable
