--- a/tests/minimal-optimization/configs/multiclass.yaml
+++ b/tests/minimal-optimization/configs/multiclass.yaml
@@ -24,6 +24,7 @@ nodes:
     metric: prediction_accuracy
     modules:
       - module_type: threshold
-        thresh: [0.5]
+        thresh: [0.5, [0.5, 0.5, 0.5]]
+      - module_type: tunable
       - module_type: argmax
       - module_type: jinoos
