--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ pytest = "8.3.2"
 
 [tool.poetry.scripts]
 "autointent" = "autointent.pipeline.main:main"
-"clear-cache" = "autointent.cache_utils:clear_chroma_cache"
+"clear-cache" = "autointent.pipeline.utils.cache:clear_chroma_cache"
 
 [tool.ruff]
 line-length = 120
