--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ target-version = "py310"
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["D", "TD", "ANN", "FIX", "S311",  "COM812", "ISC001", "ERA001", "FBT001"]
+ignore = ["D", "TD", "ANN", "FIX", "S311",  "COM812", "ISC001", "ERA001", "FBT", "TID252"]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
