refactor imports to reduce unnecessary dependencies (#9)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ optional = true
 
 [tool.poetry.group.dev.dependencies]
 datasets = "2.20.0"
+tach = "^0.11.3"
 
 [tool.poetry.group.test]
 optional = true
