--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,12 +34,18 @@ optional = true
 
 [tool.poetry.group.test.dependencies]
 pytest = "8.3.2"
+pytest-cov = "^5.0.0"
+coverage = "^7.6.1"
 
 [tool.poetry.group.lint]
 optional = true
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.6.8"
+
+
+[tool.poetry.group.typing.dependencies]
+mypy = "^1.11.2"
 
 [tool.poetry.scripts]
 "autointent" = "autointent.pipeline.main:main"
@@ -75,3 +81,30 @@ testpaths = [
     "tests",
 ]
 pythonpath = "autointent"
+
+[tool.coverage.run]
+branch = true
+omit = [
+    "__init__.py",
+]
+
+[tool.coverage.paths]
+source = [
+    "src/",
+]
+
+[tool.coverage.report]
+skip_empty = true
+
+
+[tool.mypy]
+python_version = "3.10"
+strict = true
+warn_redundant_casts = true
+plugins = [
+    "pydantic.mypy",
+    "numpy.typing.mypy_plugin",
+]
+mypy_path = "autointent"
+
+
