--- a/.gitignore
+++ b/.gitignore
@@ -161,14 +161,13 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# Chroma
+*.bin
+*.sqlite3
+
 data/chroma
 data/RuBanking77
 data/RuClinc150
 data/RuSnips
-__pycache__
 eurlex.json
-dist
-.vscode
 tests/minimal_optimization/logs
-*.bin
-*.sqlite3
