--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ optional = true
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.6.8"
 
+[tool.poetry.group.typing]
+optional = true
 
 [tool.poetry.group.typing.dependencies]
 mypy = "^1.11.2"
@@ -59,7 +61,16 @@ target-version = "py310"
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["D", "TD", "ANN", "FIX", "S311",  "COM812", "ISC001", "ERA001", "FBT"]
+ignore = [
+    "D",       # pydocstyle
+    "TD",      # todos
+    "FIX",     # fixmes
+    "S311",    # random usage
+    "COM812",  # trailing commas
+    "ISC001",  # implicit string concatenation
+    "ERA001",  # commented code
+    "FBT",     # boolean trap
+]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
