--- a/autointent/datafiles/default-multiclass-config.yaml
+++ b/autointent/datafiles/default-multiclass-config.yaml
@@ -2,7 +2,7 @@
 nodes:
   - node_type: retrieval
     metric: retrieval_hit_rate
-    modules:
+    search_space:
       - module_type: vector_db
         k: [10]
         model_name:
@@ -10,7 +10,7 @@ nodes:
           - infgrad/stella-base-en-v2
   - node_type: scoring
     metric: scoring_roc_auc
-    modules:
+    search_space:
       - module_type: knn
         k: [1, 3, 5, 10]
         weights: ["uniform", "distance", "closest"]
@@ -22,7 +22,7 @@ nodes:
         k: [1, 3, 5, 10]
   - node_type: prediction
     metric: prediction_accuracy
-    modules:
+    search_space:
       - module_type: threshold
         thresh: [0.5]
       - module_type: argmax
