--- a/autointent/datafiles/default-multilabel-config.yaml
+++ b/autointent/datafiles/default-multilabel-config.yaml
@@ -2,21 +2,20 @@
 nodes:
   - node_type: retrieval
     metric: retrieval_hit_rate_intersecting
-    modules:
+    search_space:
       - module_type: vector_db
         k: [10]
         model_name:
           - deepvk/USER-bge-m3
   - node_type: scoring
     metric: scoring_roc_auc
-    modules:
+    search_space:
       - module_type: knn
         k: [3]
         weights: ["uniform", "distance", "closest"]
       - module_type: linear
-        multilabel: [true]
   - node_type: prediction
     metric: prediction_accuracy
-    modules:
+    search_space:
       - module_type: threshold
         thresh: [0.5]
