add autointent optimization config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ optional = true
 ruff = "^0.6.8"
 
 [tool.poetry.scripts]
-"autointent" = "autointent.pipeline.optimization:main"
+"autointent" = "autointent.pipeline.optimization.optimization:optimization"
 "autointent-inference" = "autointent.pipeline.inference:main"
 "clear-cache" = "autointent.pipeline.utils.cache:clear_chroma_cache"
 
