--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,14 +30,18 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: "pip"
 
-    - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-        echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+    # - name: Install Poetry
+    #   run: |
+    #     curl -sSL https://install.python-poetry.org | python3 -
+    #     echo "$HOME/.poetry/bin" >> $GITHUB_PATH
 
     - name: Install dependencies
+      # run: |
+      #   poetry install --with test
       run: |
-        poetry install --with test
+          pip install .
+          pip install pytest
+          pytest
 
     - name: Run tests
       run: |
