--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,10 +15,11 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest ]
-        python-version: [ "3.9", "3.10", "3.11", "3.12" ]
-        include:
-          - os: windows-latest
-            python-version: "3.9"
+        python-version: [ "3.10", "3.11", "3.12" ]
+        # waighing when pysql will be removed
+        # include:
+        #   - os: windows-latest
+        #     python-version: "3.10"
 
     steps:
     - name: Checkout code
