--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ optuna = "^4.0.0"
 xeger = "^0.4.0"
 pathlib = "^1.0.1"
 pydantic = "^2.9.2"
+hydra-core = "^1.3.2"
 
 
 [tool.poetry.group.dev]
@@ -50,7 +51,8 @@ optional = true
 mypy = "^1.11.2"
 
 [tool.poetry.scripts]
-"autointent" = "autointent.pipeline.main:main"
+"autointent" = "autointent.pipeline.optimization.optimization:optimization"
+"autointent-inference" = "autointent.pipeline.inference:main"
 "clear-cache" = "autointent.pipeline.utils.cache:clear_chroma_cache"
 
 [tool.ruff]
