--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,10 +16,9 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         python-version: [ "3.10", "3.11", "3.12" ]
-        # waighing when pysql will be removed
-        # include:
-        #   - os: windows-latest
-        #     python-version: "3.10"
+        include:
+          - os: windows-latest
+            python-version: "3.10"
 
     steps:
     - name: Checkout code
