refactor pipeline to `OptimizationPipeline` and `InferencePipeline`, add `InferencePipelineConfig`

--- a/autointent/datafiles/inference-config-example.yaml
+++ b/autointent/datafiles/inference-config-example.yaml
@@ -3,14 +3,16 @@ nodes:
     module_type: vector_db
     module_config:
       k: 10
+      model_name: infgrad/stella-base-en-v2
     load_path: .
   - node_type: scoring
     module_type: knn
     module_config:
+      k: 10
       weights: uniform
     load_path: .
   - node_type: prediction
+    module_type: threshold
     module_config:
-      module_type: threshold
       thresh: 0.5
     load_path: .
