--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,8 +51,8 @@ optional = true
 mypy = "^1.11.2"
 
 [tool.poetry.scripts]
-"autointent" = "autointent.pipeline.optimization.optimization:optimization"
-"autointent-inference" = "autointent.pipeline.inference:main"
+"autointent" = "autointent.pipeline.optimization.cli_endpoint:main"
+"autointent-inference" = "autointent.pipeline.inference.cli_endpoint:main"
 "clear-cache" = "autointent.pipeline.utils.cache:clear_chroma_cache"
 
 [tool.ruff]
