--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ mypy = "^1.11.2"
 [tool.poetry.scripts]
 "autointent" = "autointent.pipeline.optimization.cli_endpoint:main"
 "autointent-inference" = "autointent.pipeline.inference.cli_endpoint:main"
-"clear-cache" = "autointent.pipeline.utils.cache:clear_chroma_cache"
+"clear-cache" = "autointent.pipeline.optimization.utils.cache:clear_chroma_cache"
 
 [tool.ruff]
 line-length = 120
