--- a/.github/workflows/typing.yml
+++ b/.github/workflows/typing.yml
@@ -1,7 +1,7 @@
 name: Typing
 on: [ push, pull_request ]
 jobs:
-  ruff:
+  mypy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
