--- a/.github/workflows/typing.yml
+++ b/.github/workflows/typing.yml
@@ -11,10 +11,14 @@ jobs:
           python-version: "3.10"
           cache: "pip"
 
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+
       - name: Install dependencies
         run: |
-            pip install .
-            pip install mypy
+          poetry install --with typing
 
       - name: Run mypy
         run: mypy autointent
