--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,10 @@ ruff = "^0.6.8"
 optional = true
 
 [tool.poetry.group.typing.dependencies]
-mypy = "^1.11.2"
+mypy = "^1"
+types-pyyaml = "^6.0.12.20240917"
+types-pygments = "^2.18.0.20240506"
+types-setuptools = "^75.2.0.20241019"
 
 [tool.poetry.scripts]
 "autointent" = "autointent.pipeline.optimization.optimization:optimization"
