--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pathlib = "^1.0.1"
 pydantic = "^2.9.2"
 hydra-core = "^1.3.2"
 faiss-cpu = "^1.9.0"
+openai = "^1.52.1"
 
 
 [tool.poetry.group.dev]
@@ -138,5 +139,3 @@ module = [
     "faiss",
 ]
 ignore_missing_imports = true
-
-
