--- a/tests/assets/configs/multiclass.yaml
+++ b/tests/assets/configs/multiclass.yaml
@@ -15,9 +15,11 @@ nodes:
         weights: [uniform, distance, closest]
       - module_type: linear
       - module_type: dnnc
-        model_name:
+        cross_encoder_name:
           - cross-encoder/ms-marco-MiniLM-L-6-v2
           - avsolatorio/GIST-small-Embedding-v0
+        search_model_name:
+          - sergeyzh/rubert-tiny-turbo
         k: [1, 3]
         train_head: [false, true]
   - node_type: prediction
