--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ optional = true
 pytest = "8.3.2"
 pytest-cov = "^5.0.0"
 coverage = "^7.6.1"
+pytest-asyncio = "^0.24.0"
 
 [tool.poetry.group.lint]
 optional = true
