test: added pytest-asyncio to tests action

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -33,7 +33,7 @@ jobs:
     - name: Install dependencies
       run: |
           pip install .
-          pip install pytest
+          pip install pytest pytest-asyncio
 
     - name: Run tests
       run: |
