--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pathlib = "^1.0.1"
 pydantic = "^2.9.2"
 hydra-core = "^1.3.2"
 faiss-cpu = "^1.9.0"
+openai = "^1.52.1"
 
 
 [tool.poetry.group.dev]
@@ -36,6 +37,7 @@ optional = true
 pytest = "8.3.2"
 pytest-cov = "^5.0.0"
 coverage = "^7.6.1"
+pytest-asyncio = "^0.24.0"
 
 [tool.poetry.group.lint]
 optional = true
@@ -138,5 +140,3 @@ module = [
     "faiss",
 ]
 ignore_missing_imports = true
-
-
