--- a/autointent/datafiles/default-multiclass-config.yaml
+++ b/autointent/datafiles/default-multiclass-config.yaml
@@ -16,7 +16,7 @@ nodes:
         weights: ["uniform", "distance", "closest"]
       - module_type: linear
       - module_type: dnnc
-        model_name:
+        cross_encoder_name:
           - BAAI/bge-reranker-base
           - cross-encoder/ms-marco-MiniLM-L-6-v2
         k: [1, 3, 5, 10]
