--- a/tests/assets/configs/multiclass.yaml
+++ b/tests/assets/configs/multiclass.yaml
@@ -4,7 +4,7 @@ nodes:
     search_space:
       - module_type: vector_db
         k: [10]
-        model_name:
+        embedder_name:
           - sentence-transformers/all-MiniLM-L6-v2
           - avsolatorio/GIST-small-Embedding-v0
   - node_type: scoring
@@ -18,8 +18,6 @@ nodes:
         cross_encoder_name:
           - cross-encoder/ms-marco-MiniLM-L-6-v2
           - avsolatorio/GIST-small-Embedding-v0
-        search_model_name:
-          - sergeyzh/rubert-tiny-turbo
         k: [1, 3]
         train_head: [false, true]
   - node_type: prediction
