--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,11 @@ types-pygments = "^2.18.0.20240506"
 types-setuptools = "^75.2.0.20241019"
 joblib-stubs = "^1.4.2.5.20240918"
 
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^8.1.3"
+pydata-sphinx-theme = "^0.16.0"
+
 [tool.poetry.scripts]
 "autointent" = "autointent.pipeline.optimization.cli_endpoint:main"
 "autointent-inference" = "autointent.pipeline.inference.cli_endpoint:main"
@@ -83,9 +88,13 @@ ignore = [
 "__init__.py" = ["F401"]
 "tests/*.py" = ["S", "PLR2004", "ERA", "D", "ANN", "SLF"]
 "autointent/modules/*" = ["ARG002", "ARG003"]  # unused argument
+"docs/*" = ["INP001", "A001"]
 
 [tool.ruff.lint.pylint]
 max-args = 10
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
 [build-system]
 requires = ["poetry-core"]
