--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ pydantic = "^2.9.2"
 hydra-core = "^1.3.2"
 faiss-cpu = "^1.9.0"
 openai = "^1.52.1"
-datasets = "2.20.0"
+datasets = "^3.1.0"
 
 
 [tool.poetry.group.dev]
