--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,9 +90,13 @@ ignore = [
 "__init__.py" = ["F401"]
 "tests/*.py" = ["S", "PLR2004", "ERA", "D", "ANN", "SLF"]
 "autointent/modules/*" = ["ARG002", "ARG003"]  # unused argument
+"docs/*" = ["INP001", "A001"]
 
 [tool.ruff.lint.pylint]
 max-args = 10
+
+[tool.ruff.lint.pydocstyle]
+convention = "pep257"
 
 [build-system]
 requires = ["poetry-core"]
