--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ joblib-stubs = "^1.4.2.5.20240918"
 [tool.poetry.group.docs.dependencies]
 sphinx = "^8.1.3"
 pydata-sphinx-theme = "^0.16.0"
+sphinx-autodoc-typehints = "^2.5.0"
+sphinx-copybutton = "^0.5.2"
 
 [tool.poetry.scripts]
 "autointent" = "autointent.pipeline.optimization.cli_endpoint:main"
@@ -74,7 +76,7 @@ target-version = "py310"
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = [
-    "D",       # pydocstyle
+#    "D",       # pydocstyle
     "TD",      # todos
     "FIX",     # fixmes
     "S311",    # random usage
@@ -85,10 +87,11 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401"]
+"__init__.py" = ["F401", "D104"]
 "tests/*.py" = ["S", "PLR2004", "ERA", "D", "ANN", "SLF"]
 "autointent/modules/*" = ["ARG002", "ARG003"]  # unused argument
-"docs/*" = ["INP001", "A001"]
+"docs/*" = ["INP001", "A001", "D"]
+"*/utils.py" = ["D104", "D100"]
 
 [tool.ruff.lint.pylint]
 max-args = 10
