--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,8 @@ optional = true
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^8.1.3"
+jupytext = "^1.16.4"
+nbsphinx = "^0.9.5"
 
 [tool.poetry.scripts]
 "autointent" = "autointent.pipeline.optimization.cli_endpoint:main"
