move `docs_utils` outside of `autointent`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "ruff.configuration": "pyproject.toml"
+    "ruff.configuration": "pyproject.toml",
+    "python.analysis.extraPaths": [
+        "./docs/source"
+    ]
 }
