--- a/experiments/dnnc/train/hwu64_scoring_precision/inference_config.yaml
+++ b/experiments/dnnc/train/hwu64_scoring_precision/inference_config.yaml
@@ -12,8 +12,6 @@ nodes_configs:
   node_type: retrieval
 - load_path: null
   module_config:
-    cross_encoder_name: cross-encoder/ms-marco-MiniLM-L-6-v2
-    k: 3
-    train_head: true
-  module_type: dnnc
+    embedder_name: avsolatorio/GIST-small-Embedding-v0
+  module_type: linear
   node_type: scoring
