--- a/experiments/dnnc/train/ru_snips_scoring_f1/inference_config.yaml
+++ b/experiments/dnnc/train/ru_snips_scoring_f1/inference_config.yaml
@@ -12,8 +12,8 @@ nodes_configs:
   node_type: retrieval
 - load_path: null
   module_config:
-    cross_encoder_name: cross-encoder/ms-marco-MiniLM-L-12-v2
-    k: 5
+    cross_encoder_name: BAAI/bge-m3
+    k: 10
     train_head: true
   module_type: dnnc
   node_type: scoring
