--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ hydra-core = "^1.3.2"
 faiss-cpu = "^1.9.0"
 openai = "^1.52.1"
 datasets = "2.20.0"
+ruff = "^0.8.0"
 
 
 [tool.poetry.group.dev]
@@ -39,12 +40,6 @@ pytest-cov = "^5.0.0"
 coverage = "^7.6.1"
 pytest-asyncio = "^0.24.0"
 
-[tool.poetry.group.lint]
-optional = true
-
-[tool.poetry.group.lint.dependencies]
-ruff = "^0.6.8"
-
 [tool.poetry.group.typing]
 optional = true
 
@@ -55,13 +50,17 @@ types-pygments = "^2.18.0.20240506"
 types-setuptools = "^75.2.0.20241019"
 joblib-stubs = "^1.4.2.5.20240918"
 
-[tool.poetry.group.docs]
-optional = true
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^8.1.3"
+pydata-sphinx-theme = "^0.16.0"
 jupytext = "^1.16.4"
 nbsphinx = "^0.9.5"
+sphinx-autodoc-typehints = "^2.5.0"
+sphinx-copybutton = "^0.5.2"
+
+[tool.poetry.group.docs]
+optional = true
 
 [tool.poetry.scripts]
 "autointent" = "autointent.pipeline.optimization.cli_endpoint:main"
@@ -88,11 +87,12 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401"]
+"__init__.py" = ["F401", "D104"]
 "tests/*.py" = ["S", "PLR2004", "ERA", "D", "ANN", "SLF"]
 "autointent/modules/*" = ["ARG002", "ARG003"]  # unused argument
-"docs/*" = ["INP001", "A001"]
-"tutorials/*" = ["INP001"]
+"docs/*" = ["INP001", "A001", "D"]
+"*/utils.py" = ["D104", "D100"]
+"tutorials/*" = ["INP001", "T"]
 
 [tool.ruff.lint.pylint]
 max-args = 10
