--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,6 @@ target-version = "py310"
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = [
-    "D",       # pydocstyle
     "TD",      # todos
     "FIX",     # fixmes
     "S311",    # random usage
@@ -92,7 +91,7 @@ ignore = [
 "autointent/modules/*" = ["ARG002", "ARG003"]  # unused argument
 "docs/*" = ["INP001", "A001", "D"]
 "*/utils.py" = ["D104", "D100"]
-"tutorials/*" = ["INP001", "T"]
+"tutorials/*" = ["INP001", "T", "D"]
 
 [tool.ruff.lint.pylint]
 max-args = 10
