add jupyter to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ jupytext = "^1.16.4"
 nbsphinx = "^0.9.5"
 sphinx-autodoc-typehints = "^2.5.0"
 sphinx-copybutton = "^0.5.2"
+jupyter = "^1.1.1"
 
 [tool.poetry.group.docs]
 optional = true
