--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,6 @@ hydra-core = "^1.3.2"
 faiss-cpu = "^1.9.0"
 openai = "^1.52.1"
 datasets = "2.20.0"
-ruff = "^0.8.0"
-
 
 [tool.poetry.group.dev]
 optional = true
@@ -40,6 +38,12 @@ pytest-cov = "^5.0.0"
 coverage = "^7.6.1"
 pytest-asyncio = "^0.24.0"
 
+[tool.poetry.group.lint]
+optional = true
+
+[tool.poetry.group.lint.dependencies]
+ruff = "^0.8.0"
+
 [tool.poetry.group.typing]
 optional = true
 
@@ -50,6 +54,8 @@ types-pygments = "^2.18.0.20240506"
 types-setuptools = "^75.2.0.20241019"
 joblib-stubs = "^1.4.2.5.20240918"
 
+[tool.poetry.group.docs]
+optional = true
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^8.1.3"
@@ -58,9 +64,7 @@ jupytext = "^1.16.4"
 nbsphinx = "^0.9.5"
 sphinx-autodoc-typehints = "^2.5.0"
 sphinx-copybutton = "^0.5.2"
-
-[tool.poetry.group.docs]
-optional = true
+sphinx-autoapi = "^3.3.3"
 
 [tool.poetry.scripts]
 "autointent" = "autointent.pipeline.optimization.cli_endpoint:main"
