--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,38 @@
 name = "autointent"
 version = "0.2.1-alpha1"
 description = "A tool for automatically configuring a text classification pipeline for intent prediction."
-authors = ["voorhs <ilya_alekseev_2016@list.ru>"]
+authors = ["Alexeev Ilya @voorhs", "Kuznetsov Denis @kudep"]
+maintainers = [
+    "Alexeev Ilya @voorhs",
+    "Solomatin Roman @Samoed",
+    "Sergeenko Egor @truff4ut",
+]
 readme = "README.md"
 homepage = "https://deeppavlov.github.io/AutoIntent/"
 repository = "https://github.com/deeppavlov/AutoIntent"
 documentation = "https://deeppavlov.github.io/AutoIntent/"
+keywords = ["nlp", "dialog-systems", "transformers", "auto-ml"]
+classifiers=[
+    'Development Status :: 4 - Beta',
+    'Intended Audience :: Developers',
+    'Intended Audience :: Science/Research',
+    'Natural Language :: English',
+    'Natural Language :: Russian',
+    'Operating System :: POSIX :: Linux',
+    'Operating System :: Microsoft :: Windows',
+    'Programming Language :: Python',
+    'Programming Language :: Python :: 3',
+    'Programming Language :: Python :: 3.10',
+    'Programming Language :: Python :: 3.11',
+    'Programming Language :: Python :: 3.12',
+    'Topic :: Scientific/Engineering :: Artificial Intelligence',
+    'Topic :: Software Development :: Libraries :: Python Modules',
+    'Topic :: Text Processing :: Linguistic',
+    'Topic :: Utilities',
+    'Framework :: Pytest',
+    'Framework :: Sphinx',
+    'Typing :: Typed',
+]
 
 
 [tool.poetry.dependencies]
