--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "autointent"
-version = "0.2.1-alpha1"
+version = "0.0.1"
 description = "A tool for automatically configuring a text classification pipeline for intent prediction."
-authors = ["Alexeev Ilya @voorhs", "Kuznetsov Denis @kudep"]
+authors = ["Alexeev Ilya <ilya_alekseev_2016@list.ru>", "Kuznetsov Denis <kuznetsov.den.p@gmail.com>"]
 maintainers = [
-    "Alexeev Ilya @voorhs",
-    "Solomatin Roman @Samoed",
-    "Sergeenko Egor @truff4ut",
+    "Alexeev Ilya <ilya_alekseev_2016@list.ru>",
+    "Solomatin Roman <risolomatin@gmail.com>",
+    "Sergeenko Egor <es.egor.sergeenko@gmail.com>",
 ]
 readme = "README.md"
 homepage = "https://deeppavlov.github.io/AutoIntent/"
@@ -21,11 +21,6 @@ classifiers=[
     'Natural Language :: Russian',
     'Operating System :: POSIX :: Linux',
     'Operating System :: Microsoft :: Windows',
-    'Programming Language :: Python',
-    'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.10',
-    'Programming Language :: Python :: 3.11',
-    'Programming Language :: Python :: 3.12',
     'Topic :: Scientific/Engineering :: Artificial Intelligence',
     'Topic :: Software Development :: Libraries :: Python Modules',
     'Topic :: Text Processing :: Linguistic',
