--- a/tests/assets/configs/multiclass.yaml
+++ b/tests/assets/configs/multiclass.yaml
@@ -20,6 +20,12 @@ nodes:
           - avsolatorio/GIST-small-Embedding-v0
         k: [1, 3]
         train_head: [false, true]
+      - module_type: rerank_scorer
+        k: [ 5, 10 ]
+        weights: [uniform, distance, closest]
+        m: [ 2, 3 ]
+        cross_encoder_name:
+          - cross-encoder/ms-marco-MiniLM-L-6-v2
   - node_type: prediction
     metric: prediction_accuracy
     search_space:
