--- a/tests/assets/configs/multilabel.yaml
+++ b/tests/assets/configs/multilabel.yaml
@@ -16,6 +16,12 @@ nodes:
       - module_type: linear
       - module_type: mlknn
         k: [5]
+      - module_type: rerank_scorer
+        k: [ 5, 10 ]
+        weights: [ uniform, distance, closest ]
+        m: [ 2, 3 ]
+        cross_encoder_name:
+          - cross-encoder/ms-marco-MiniLM-L-6-v2
   - node_type: prediction
     metric: prediction_accuracy
     search_space:
