--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,7 @@ nbsphinx = "^0.9.5"
 sphinx-autodoc-typehints = "^2.5.0"
 sphinx-copybutton = "^0.5.2"
 sphinx-autoapi = "^3.3.3"
+ipykernel = "^6.29.5"
 
 [tool.poetry.scripts]
 "autointent" = "autointent.pipeline.optimization._cli_endpoint:main"
