--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ faiss-cpu = "^1.9.0"
 openai = "^1.52.1"
 datasets = "^3.1.0"
 ruff = "^0.8.0"
+xxhash = "^3.5.0"
 
 [tool.poetry.group.dev]
 optional = true
